# SimulinkParser

./: .gitignore  .gitmodules  README.md  pyproject.toml  setup.cfg  simulink_parser.py
common/: helpers.py
parsers/: block.py  line.py  xml.py
source/: simulink_parser.py
source/SimulinkParser.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
source/common/: datatypes.py  file_system.py  helpers.py  result.py
source/parsers/: block.py  line.py  xml.py
src/: simulink_parser.py
src/common/: logging.py
