[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SimulinkParser"
version = "1.0"
authors = [
  {name="Felipe Xavier", email="f.d.azeredo.coutinho.xavier@tue.nl"},
]
description = "Script to parse Simulink models so that they can be visualized with the ClassViz format"
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
  "simulink",
  "parser",
  "matlab",
  "classviz",
  "savant"
]
dependencies = [
  "astroid==3.3.8",
  "autopep8==2.3.1",
  "dataclasses-json==0.6.7",
  "dill==0.3.9",
  "isort==5.13.2",
  "marshmallow==3.25.1",
  "mccabe==0.7.0",
  "mypy-extensions==1.0.0",
  "packaging==24.2",
  "platformdirs==4.3.6",
  "pycodestyle==2.12.1",
  "pylint==3.3.3",
  "tomlkit==0.13.2",
  "typing-inspect==0.9.0",
  "typing_extensions==4.12.2"
]
